--- a/introlink-client/package.json
+++ b/introlink-client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@types/axios": "^0.14.4",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
